# project-practice

./: .dockerignore  .env.example  .gitignore  .gitmodules  README.md  abc466_g.md  clear-history.sh  compose.yaml  deploy.cmd  deploy.ps1  deploy.sh  restart-update.sh  start.sh  step.md  stop.sh  接下来的工作.md  项目设计提示词.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  api.py  config.py  docker_proxy.py  errors.py  main.py  models.py  storage.py
backend/app/jngen_doc_context/: index.json  tag_catalog.json  tag_catalog.md
backend/app/services/: agent4_document_context.py  agent_graphs.py  agent_recovery.py  agent_validators.py  candidate_verifier.py  code_candidate.py  code_format_contract.py  compiler_diagnostics.py  context_provider.py  counterexample_ledger.py  dataset.py  defects.py  generator_analysis.py  generator_policy.py  jngen_document_context.py  jngen_policy.py  langgraph_runner.py  model_client.py  model_configuration.py  pipeline.py  project_service.py  proof_obligations.py  recovery_diagnostics.py  recovery_policies.py  runtime_parameters.py  sandbox.py  stage4_plan.py  structure_tag_catalog.py  testlib_policy.py  timing_report.py  tool_gateway.py
backend/app/testlib_doc_context/: testlib_generator.md  (+1 more)
backend/tests/: conftest.py  test_api_flow.py  test_compiler_diagnostics.py  test_context_and_models.py  test_generator_analysis.py  test_langgraph_workflow.py  test_model_configuration.py  test_project_management.py  test_recovery_diagnostics.py  test_sandbox_performance.py  test_security.py  test_structure_tag_catalog.py
(+35 files in other folders)
