[project]
name = "contest-dataset-backend"
version = "0.1.0"
description = "Backend MVP for contest dataset generation and validation"
requires-python = ">=3.12,<3.13"
dependencies = [
  "docker>=7.1,<8",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "langgraph==1.2.9",
  "langgraph-checkpoint-sqlite==3.1.0",
  "pydantic-settings>=2.7,<3",
  "python-multipart>=0.0.20,<1",
  "uvicorn[standard]>=0.34,<1",
]

[dependency-groups]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "ruff>=0.9,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

